tests/purs/failing/OrphanKindDeclaration1.purs
-- @shouldFailWith OrphanKindDeclaration
module Main where

type Foo :: Type
